<resources>
    <string name="app_name">Convoy Trucking</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>
    <string name="chat">In-game chat</string>
    <string name="server_info">Server info</string>
    <string name="houses">Houses</string>
    <string name="house">House</string>
    <string name="dealers">Vehicle dealers</string>
    <string name="players_online_s">Players online: %1$s/%2$s</string>
    <string name="uptime_s">%s uptime</string>
    <string name="error_request">Connection error</string>
    <string name="s_slots">%d slots</string>
    <string name="current_owner">Current Owner</string>
    <string name="player">Player</string>
    <string name="staff_admin">Administrator</string>
    <string name="staff_mod">Moderator</string>
    <string name="staff_jrmod">Jr. Moderator</string>
    <string name="score_s">Score: %s</string>
    <string name="convoy_score_s">Convoy Score: %s</string>
    <string name="truck_loads_s">Truck Loads: %s</string>
    <string name="last_seen_s">Last seen: %s</string>
    <string name="server_staff">Server Staff</string>
    <string name="num_vehicles">%d vehicles</string>
    <string name="vehicles">Vehicles</string>
    <string name="top_speed_s">Top speed: %s</string>
    <string name="all_vehicles">All vehicles</string>
    <string name="AllVehiclesCondensed">All</string>
    <string name="news">News</string>
    <string name="about">About</string>
    <string name="credits">Developed by Michał Dąbski (mick88)</string>
</resources>
