<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_news"
            android:checked="true"
            android:icon="@drawable/ic_news"
            android:title="@string/news" />
        <item
            android:id="@+id/menu_server_info"
            android:checked="true"
            android:icon="@drawable/ic_info"
            android:title="@string/server_info" />
        <item
            android:id="@+id/menu_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/menu_houses"
            android:icon="@drawable/ic_house"
            android:title="@string/houses" />
        <item
            android:id="@+id/menu_dealers"
            android:icon="@drawable/ic_dealer"
            android:title="@string/dealers" />
    </group>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about" />
</menu>